syntax = "proto3";
package simplebank;

import "google/protobuf/timestamp.proto";
import "simplebank/users.proto";

option go_package = "github.com/orlandorode97/simplebank/generated/proto/simplebank";

service SimplebankService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string full_name = 3;
  string email = 4;
}

message CreateUserResponse {
  User user = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string session_id = 1;
  string access_token = 2;
  google.protobuf.Timestamp access_token_expires_at = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp refresh_token_expires_at = 5;
  User user = 6;
}

message UpdateUserRequest {
  string username = 1;
  optional string full_name = 2;
  optional string email = 3;
  optional string password = 4;
}

message UpdateUserResponse {
  User user = 1;
}
